--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   cached_network_image: ^3.2.1
   flutter_blurhash: ^0.7.0
   video_player: ^2.4.7
+  cached_video_player: ^2.0.3
+  chewie: ^1.3.5
+  flutter_downloader: ^1.8.3
+  permission_handler: ^10.0.0
+  path_provider: ^2.0.11
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
