--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   permission_handler: ^10.0.0
   path_provider: ^2.0.11
   flutter_easyloading: ^3.0.5
+  share_plus: ^4.1.0
 
 dev_dependencies:
   flutter_test:
