--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   video_player: ^2.4.7
   cached_video_player: ^2.0.3
   chewie: ^1.3.5
-  flutter_downloader: ^1.8.3
+  flutter_downloader: ^1.8.3+2
   permission_handler: ^10.0.0
   path_provider: ^2.0.11
   flutter_easyloading: ^3.0.5
